# inspector

./: README.md  io.github.nokse22.inspector.json  io.github.nokse22.inspector.json~  meson.build  python3-markdown-it-py.json  python3-weasyprint.json
.flatpak-builder/cache/refs/heads/x86_64-io.github.nokse22.inspector.json/: init
.flatpak-builder/checksums/: x86_64-io.github.nokse22.inspector.json
.github/workflows/: flatpak.yml  snap.yml
data/: inspector.gresource.xml  io.github.nokse22.inspector.appdata.xml.in  io.github.nokse22.inspector.desktop.in  io.github.nokse22.inspector.gschema.xml  meson.build  style.css
data/gtk/: help-overlay.cmb  help-overlay.ui
data/icons/: meson.build
data/ui/: window.ui
po/: Inspector.pot  LINGUAS  POTFILES  cs.po  de.po  fr.po  hi.po  inspector.pot  it.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  ru.po  template.pot  tr.po  zh_CN.po
snap/: snapcraft.yaml
src/: command-test.gresource.xml  command-test.in  inspector.in  main.py  meson.build  window.py
